# pyQualitas

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-release.yml  python-test.yml  python-unittest.yml
checks/: singledfchecks.py
src/checks/: dualdfchecks.py  singledfchecks.py
src/checksuite/: checksuite.py
src/main/checks/: dualdfchecks.py  singledfchecks.py
src/main/checksuite/: checksuite.py
src/main/reports/: TestResultTemplate.html
src/main/template/: TestResult.html  TestResultTemplate.html
src/main/utils/: helper.py  logger.py
src/pyqualitas/checks/: arbitarychecks.py  dualdfchecks.py  singledfchecks.py
src/pyqualitas/checksuite/: checksuite.py
src/pyqualitas/utils/: helper.py  logger.py
src/pyqualitas/utils/template/: TestResult.html
src/pyquality/checks/: dualdfchecks.py  singledfchecks.py
src/pyquality/utils/: helper.py
src/test/: test_singledfchecks.py
src/tests/: test_checksuite.py  test_dualdfchecks.py  test_helper.py  test_singledfchecks.py
src/utils/: helper.py  logger.py
tests/: conftest.py  test_arbitarychecks.py  test_checksuite.py  test_dualdfchecks.py  test_helper.py  test_singledfchecks.py
