[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyQuality"
version = "1.0"
authors = [
  { name="Venkatesh Venkataramani", email="venkatesh.venkataramani@outlook.com" },
]
description = "A project to ensure the data quality using python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "pyspark >= 3.3.0",
    "Jinja2 >= 3.1.2",
    "pandas >= 1.5.0"
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyquality.template" = ["TestResult.html"]

[project.urls]
"Homepage" = "https://github.com/IamVenkatesh/pyQuality/wiki"
"Bug Tracker" = "https://github.com/IamVenkatesh/pyQuality/issues"